--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,30 @@ include = ["auditlog_extra/*.py"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["auditlog_extra"]
+
+[tool.ruff]
+target-version = "py39"
+
+[tool.ruff.lint]
+select = [
+    # Pyflakes
+    "F",
+    # pycodestyle
+    "E",
+    "W",
+    # isort
+    "I",
+    # pep8-naming
+    "N",
+    # flake8-bugbear without opinionated rules
+    "B0",
+    # flake8-pie
+    "PIE",
+    # flake8-print
+    "T20",
+]
+extend-per-file-ignores = { "./tests/*" = ["E501"] }
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "tests.test_settings"
+norecursedirs = [".git", "venv"]
